# sfc

./: .cirrus.yml  .gitignore  CMakeLists.txt  README.md
fuzzing/corpus/: cipher.txt
src/: cli.cpp  crypto.cpp  fuzz.cpp  nng-toy.cpp  sfc.cpp  sfc.h
test/: test_ciphertext_corruption.sh  test_empty_password_string.sh  test_empty_password_string_fail.sh  test_help.sh  test_large_file.sh  test_password_file.sh  test_password_string.sh  tests.cmake
